--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,133 @@
-body{
-    background-color: black;
+html,body{
+    margin: 0;
+    padding:0;
+    font-size: 62.5%;
 }
-header{
+body{
+    background-color:lightblue;
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    
+    
+}
+
+
+header{ 
+    background-color:none;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 10%;
+    }
+#header_image{
     width: 100%;
 }
+
+ul{
+    margin:0;
+    padding: 0;
+    }
+.header_tabs{
+    background-color: blue;
+    color:white;
+    border-color:white;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 5px;
+    width:calc(60%/7);
+    height: 20%;
+    display: inline-block;
+    font-size: 20px;
+  
+}
+a{
+    color: white;
+}
+
+main{
+    background-color: white;
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0;
+    width: 60.5%;
+    height: 100%;
+    font-size: 30px;
+    
+}
+
+section{
+    background-color: white;
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    
+}
+#section_one_mission{
+    background-color: white;
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0;
+    width: calc(100%/2);
+    height:100%;
+    float: left;
+    }
+#section_one_images{
+    background-color: white;
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0;
+    width:calc(100%/2);
+    height:100%;
+    float: right;
+    
+}
+
+#section_two_column_one{
+    background-color: #ffffff;
+    box-sizing:border-box;
+    color:#93D5FF;
+    margin:0;
+    padding:10px;
+    padding-left: 2px;
+    width:calc(130%/2);
+    height:100%;
+    float:left;
+}
+#section_two_column_two{
+    background-color: #FFDF7A;
+    box-sizing:border-box;
+    color:#93D5FF;
+    margin:0;
+    padding:0;
+    width:calc(70%/2);
+    height:100%;
+    float:right;
+    
+}
+
+#section_two_image{
+    margin:0;
+    padding:0;
+    width:100%;
+    height:100%;
+    text-align:center;
+}
+
+
+.section_two_li{
+    display:block;
+    text-align:left;
+}
+
+footer{
+    
+    
+}
+
