--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ ul{
     margin:0;
     padding: 0;
     }
+
 .header_tabs{
     background-color: blue;
     color:white;
@@ -126,10 +127,12 @@ section{
 }
 
 footer{
+    border: solid 5px;
+    background-color: aqua;
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
     
     
 }
-<<<<<<< HEAD
-
-=======
->>>>>>> refs/remotes/origin/gh-branch
+ refs/remotes/origin/gh-branch
